--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,15 @@
   <div id="columns">
 
     <div id="side">
+    
+    <div>
+		<% if @cart %>
+		  <% hidden_div_if(@cart.line_items.empty?, :id => 'cart') do %>
+		  	<%= render @cart %>
+		  	<% end %>
+    	<% end %>
+    </div>
+    
 
       <ul>
 
